--- a/cwinux/lib/app/src/Makefile.in
+++ b/cwinux/lib/app/src/Makefile.in
@@ -41,7 +41,8 @@ subdir = lib/app/src
 DIST_COMMON = $(cwxappinclude_HEADERS) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
-am__aclocal_m4_deps = $(top_srcdir)/configure.in
+am__aclocal_m4_deps = $(top_srcdir)/ax_cxx_compile_stdcxx_0x.m4 \
+	$(top_srcdir)/configure.in
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 	$(ACLOCAL_M4)
 mkinstalldirs = $(install_sh) -d
