--- a/trunk/cwinux/configure.in
+++ b/trunk/cwinux/configure.in
@@ -5,11 +5,13 @@ AC_INIT
 AM_INIT_AUTOMAKE(cwinux, 1.0)
 
 # Add a test for a compiler.
+m4_include([ax_cxx_compile_stdcxx_0x.m4])
+
 AC_PROG_CC
 AM_PROG_LIBTOOL
+AX_CXX_COMPILE_STDCXX_0X
 
 
-LIBEVENT_DIR
 
 AC_DEFINE(_LARGEFILE64_SOURCE)
 AC_DEFINE(_FILE_OFFSET_BITS,64)
