--- a/trunk/cwinux/lib/app/src/Makefile.in
+++ b/trunk/cwinux/lib/app/src/Makefile.in
@@ -200,7 +200,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 pkgconfigdir = 
 lib_LTLIBRARIES = libcwxapp.la
-libcwxapp_la_CPPFLAGS = -W -Wall -Wno-deprecated
+libcwxapp_la_CPPFLAGS = -W -Wall
 libcwxapp_la_SOURCES = \
 	CwxAppConfig.cpp\
 	CwxAppHandler4Msg.cpp\
