--- a/trunk/cwinux/lib/net/src/Makefile.in
+++ b/trunk/cwinux/lib/net/src/Makefile.in
@@ -184,7 +184,7 @@ sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 pkgconfigdir = 
 lib_LTLIBRARIES = libcwxnet.la
-libcwxnet_la_CPPFLAGS = -W -Wall -Wno-deprecated
+libcwxnet_la_CPPFLAGS = -W -Wall
 libcwxnet_la_SOURCES = \
 	CwxAddr.cpp\
 	CwxSockAcceptor.cpp\
