--- a/cwinux/interface/apache/Makefile
+++ b/cwinux/interface/apache/Makefile
@@ -34,8 +34,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-build_triplet = x86_64-unknown-linux-gnu
-host_triplet = x86_64-unknown-linux-gnu
+build_triplet = i686-pc-linux-gnu
+host_triplet = i686-pc-linux-gnu
 DIST_COMMON = README $(am__configure_deps) $(srcdir)/Makefile.am \
 	$(srcdir)/Makefile.in $(top_srcdir)/configure AUTHORS COPYING \
 	ChangeLog INSTALL NEWS config.guess config.sub depcomp \
@@ -88,14 +88,14 @@ DIST_ARCHIVES = $(distdir).tar.gz
 GZIP_ENV = --best
 distuninstallcheck_listfiles = find . -type f -print
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /usr/home/wenbo/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run aclocal-1.9
+ACLOCAL = ${SHELL} /home/dwb/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run aclocal-1.9
 AMDEP_FALSE = #
 AMDEP_TRUE = 
-AMTAR = ${SHELL} /usr/home/wenbo/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run tar
+AMTAR = ${SHELL} /home/dwb/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /usr/home/wenbo/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run autoconf
-AUTOHEADER = ${SHELL} /usr/home/wenbo/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run autoheader
-AUTOMAKE = ${SHELL} /usr/home/wenbo/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run automake-1.9
+AUTOCONF = ${SHELL} /home/dwb/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/dwb/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/dwb/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run automake-1.9
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -115,7 +115,7 @@ ECHO_N = -n
 ECHO_T = 
 EGREP = grep -E
 EXEEXT = 
-F77 = f95
+F77 = gfortran
 FFLAGS = -g -O2
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
@@ -127,7 +127,7 @@ LIBS =
 LIBTOOL = $(SHELL) $(top_builddir)/libtool
 LN_S = ln -s
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /usr/home/wenbo/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/dwb/cwinux/cwinux/trunk/cwinux/interface/apache/missing --run makeinfo
 OBJEXT = o
 PACKAGE = mod_tut1
 PACKAGE_BUGREPORT = 
@@ -145,7 +145,7 @@ VERSION = 1.0
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
-ac_ct_F77 = f95
+ac_ct_F77 = gfortran
 ac_ct_RANLIB = ranlib
 ac_ct_STRIP = strip
 am__fastdepCC_FALSE = #
@@ -157,25 +157,25 @@ am__leading_dot = .
 am__quote = 
 am__tar = ${AMTAR} chof - "$$tardir"
 am__untar = ${AMTAR} xf -
-apache_dir = /usr/local/apache2.4.2
-apr_dir = /usr/local/apache2.4.2/apr
-apr_util_dir = /usr/local/apache2.4.2/apr-util
+apache_dir = /usr/local/apache
+apr_dir = /usr/local/apache/apr
+apr_util_dir = /usr/local/apache/apr-util
 bindir = ${exec_prefix}/bin
-build = x86_64-unknown-linux-gnu
+build = i686-pc-linux-gnu
 build_alias = 
-build_cpu = x86_64
+build_cpu = i686
 build_os = linux-gnu
-build_vendor = unknown
+build_vendor = pc
 datadir = ${prefix}/share
 exec_prefix = ${prefix}
-host = x86_64-unknown-linux-gnu
+host = i686-pc-linux-gnu
 host_alias = 
-host_cpu = x86_64
+host_cpu = i686
 host_os = linux-gnu
-host_vendor = unknown
+host_vendor = pc
 includedir = ${prefix}/include
 infodir = ${prefix}/info
-install_sh = /usr/home/wenbo/cwinux/cwinux/trunk/cwinux/interface/apache/install-sh
+install_sh = /home/dwb/cwinux/cwinux/trunk/cwinux/interface/apache/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localstatedir = ${prefix}/var
@@ -190,7 +190,7 @@ sysconfdir = ${prefix}/etc
 target_alias = 
 lib_LTLIBRARIES = libmod_cwinux.la
 libmod_cwinux_la_SOURCES = cwx_stream.c cwx_package.c mod_cwinux.c
-INCLUDES = -I/usr/local/apache2.4.2/include -I/usr/local/apache2.4.2/apr/include/apr-1 -I/usr/local/apache2.4.2/apr-util/include/apr-1
+INCLUDES = -I/usr/local/apache/include -I/usr/local/apache/apr/include/apr-1 -I/usr/local/apache/apr-util/include/apr-1
 all: all-am
 
 .SUFFIXES:
