--- a/trunk/cwinux/example/echo_thrift/echo_svr/Makefile.in
+++ b/trunk/cwinux/example/echo_thrift/echo_svr/Makefile.in
@@ -51,6 +51,10 @@ binPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(bin_PROGRAMS)
 am_cwx_echo_OBJECTS = cwx_echo-CwxEchoApp.$(OBJEXT) \
 	cwx_echo-CwxEchoConfig.$(OBJEXT) cwx_echo-cwx_echo.$(OBJEXT) \
+	cwx_echo-CwxEchoThriftIf.$(OBJEXT) \
+	cwx_echo-echo_constants.$(OBJEXT) cwx_echo-Echo.$(OBJEXT) \
+	cwx_echo-Echo_server.skeleton.$(OBJEXT) \
+	cwx_echo-echo_types.$(OBJEXT) \
 	cwx_echo-CwxEchoEventHandler.$(OBJEXT)
 cwx_echo_OBJECTS = $(am_cwx_echo_OBJECTS)
 cwx_echo_DEPENDENCIES =
@@ -105,7 +109,7 @@ INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
 LDFLAGS = @LDFLAGS@
 LIBOBJS = @LIBOBJS@
-LIBS = -lcwxapp -lcwxnet -lcwxcmn -lz -lpthread -ldl -lrt
+LIBS = -lcwxapp -lcwxnet -lcwxcmn -lthrift -lz -lpthread -ldl -lrt
 LIBTOOL = @LIBTOOL@
 LN_S = @LN_S@
 LTLIBOBJS = @LTLIBOBJS@
@@ -168,6 +172,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
+thrift_dir = @thrift_dir@
 pkgconfigdir = 
 BUILD_DATE = $(shell date +%F)
 cwx_echo_CPPFLAGS = -D_BUILD_DATE="$(BUILD_DATE)" -W -Wall
@@ -175,11 +180,16 @@ cwx_echo_SOURCES = \
 	CwxEchoApp.cpp\
 	CwxEchoConfig.cpp\
 	cwx_echo.cpp\
+	CwxEchoThriftIf.cpp\
+	../thrift/echo_constants.cpp\
+	../thrift/Echo.cpp\
+	../thrift/Echo_server.skeleton.cpp\
+	../thrift/echo_types.cpp\
 	CwxEchoEventHandler.cpp
 
 cwx_echo_LDADD = 
 cwx_echo_LDFLAGS = -L@cwinux_dir@/lib
-INCLUDES = -I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net 
+INCLUDES = -I@cwinux_dir@/include/app -I@cwinux_dir@/include/cmn -I@cwinux_dir@/include/net  -I@thrift_dir@ -I../thrift
 all: all-am
 
 .SUFFIXES:
@@ -254,7 +264,12 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-CwxEchoApp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-CwxEchoConfig.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-CwxEchoEventHandler.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-Echo.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-Echo_server.skeleton.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-cwx_echo.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-echo_constants.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/cwx_echo-echo_types.Po@am__quote@
 
 .cpp.o:
 @am__fastdepCXX_TRUE@	if $(CXXCOMPILE) -MT $@ -MD -MP -MF "$(DEPDIR)/$*.Tpo" -c -o $@ $<; \
@@ -318,6 +333,76 @@ cwx_echo-cwx_echo.obj: cwx_echo.cpp
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='cwx_echo.cpp' object='cwx_echo-cwx_echo.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-cwx_echo.obj `if test -f 'cwx_echo.cpp'; then $(CYGPATH_W) 'cwx_echo.cpp'; else $(CYGPATH_W) '$(srcdir)/cwx_echo.cpp'; fi`
+
+cwx_echo-CwxEchoThriftIf.o: CwxEchoThriftIf.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-CwxEchoThriftIf.o -MD -MP -MF "$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Tpo" -c -o cwx_echo-CwxEchoThriftIf.o `test -f 'CwxEchoThriftIf.cpp' || echo '$(srcdir)/'`CwxEchoThriftIf.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Tpo" "$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Po"; else rm -f "$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxEchoThriftIf.cpp' object='cwx_echo-CwxEchoThriftIf.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-CwxEchoThriftIf.o `test -f 'CwxEchoThriftIf.cpp' || echo '$(srcdir)/'`CwxEchoThriftIf.cpp
+
+cwx_echo-CwxEchoThriftIf.obj: CwxEchoThriftIf.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-CwxEchoThriftIf.obj -MD -MP -MF "$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Tpo" -c -o cwx_echo-CwxEchoThriftIf.obj `if test -f 'CwxEchoThriftIf.cpp'; then $(CYGPATH_W) 'CwxEchoThriftIf.cpp'; else $(CYGPATH_W) '$(srcdir)/CwxEchoThriftIf.cpp'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Tpo" "$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Po"; else rm -f "$(DEPDIR)/cwx_echo-CwxEchoThriftIf.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='CwxEchoThriftIf.cpp' object='cwx_echo-CwxEchoThriftIf.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-CwxEchoThriftIf.obj `if test -f 'CwxEchoThriftIf.cpp'; then $(CYGPATH_W) 'CwxEchoThriftIf.cpp'; else $(CYGPATH_W) '$(srcdir)/CwxEchoThriftIf.cpp'; fi`
+
+cwx_echo-echo_constants.o: ../thrift/echo_constants.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-echo_constants.o -MD -MP -MF "$(DEPDIR)/cwx_echo-echo_constants.Tpo" -c -o cwx_echo-echo_constants.o `test -f '../thrift/echo_constants.cpp' || echo '$(srcdir)/'`../thrift/echo_constants.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-echo_constants.Tpo" "$(DEPDIR)/cwx_echo-echo_constants.Po"; else rm -f "$(DEPDIR)/cwx_echo-echo_constants.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../thrift/echo_constants.cpp' object='cwx_echo-echo_constants.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-echo_constants.o `test -f '../thrift/echo_constants.cpp' || echo '$(srcdir)/'`../thrift/echo_constants.cpp
+
+cwx_echo-echo_constants.obj: ../thrift/echo_constants.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-echo_constants.obj -MD -MP -MF "$(DEPDIR)/cwx_echo-echo_constants.Tpo" -c -o cwx_echo-echo_constants.obj `if test -f '../thrift/echo_constants.cpp'; then $(CYGPATH_W) '../thrift/echo_constants.cpp'; else $(CYGPATH_W) '$(srcdir)/../thrift/echo_constants.cpp'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-echo_constants.Tpo" "$(DEPDIR)/cwx_echo-echo_constants.Po"; else rm -f "$(DEPDIR)/cwx_echo-echo_constants.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../thrift/echo_constants.cpp' object='cwx_echo-echo_constants.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-echo_constants.obj `if test -f '../thrift/echo_constants.cpp'; then $(CYGPATH_W) '../thrift/echo_constants.cpp'; else $(CYGPATH_W) '$(srcdir)/../thrift/echo_constants.cpp'; fi`
+
+cwx_echo-Echo.o: ../thrift/Echo.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-Echo.o -MD -MP -MF "$(DEPDIR)/cwx_echo-Echo.Tpo" -c -o cwx_echo-Echo.o `test -f '../thrift/Echo.cpp' || echo '$(srcdir)/'`../thrift/Echo.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-Echo.Tpo" "$(DEPDIR)/cwx_echo-Echo.Po"; else rm -f "$(DEPDIR)/cwx_echo-Echo.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../thrift/Echo.cpp' object='cwx_echo-Echo.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-Echo.o `test -f '../thrift/Echo.cpp' || echo '$(srcdir)/'`../thrift/Echo.cpp
+
+cwx_echo-Echo.obj: ../thrift/Echo.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-Echo.obj -MD -MP -MF "$(DEPDIR)/cwx_echo-Echo.Tpo" -c -o cwx_echo-Echo.obj `if test -f '../thrift/Echo.cpp'; then $(CYGPATH_W) '../thrift/Echo.cpp'; else $(CYGPATH_W) '$(srcdir)/../thrift/Echo.cpp'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-Echo.Tpo" "$(DEPDIR)/cwx_echo-Echo.Po"; else rm -f "$(DEPDIR)/cwx_echo-Echo.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../thrift/Echo.cpp' object='cwx_echo-Echo.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-Echo.obj `if test -f '../thrift/Echo.cpp'; then $(CYGPATH_W) '../thrift/Echo.cpp'; else $(CYGPATH_W) '$(srcdir)/../thrift/Echo.cpp'; fi`
+
+cwx_echo-Echo_server.skeleton.o: ../thrift/Echo_server.skeleton.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-Echo_server.skeleton.o -MD -MP -MF "$(DEPDIR)/cwx_echo-Echo_server.skeleton.Tpo" -c -o cwx_echo-Echo_server.skeleton.o `test -f '../thrift/Echo_server.skeleton.cpp' || echo '$(srcdir)/'`../thrift/Echo_server.skeleton.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-Echo_server.skeleton.Tpo" "$(DEPDIR)/cwx_echo-Echo_server.skeleton.Po"; else rm -f "$(DEPDIR)/cwx_echo-Echo_server.skeleton.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../thrift/Echo_server.skeleton.cpp' object='cwx_echo-Echo_server.skeleton.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-Echo_server.skeleton.o `test -f '../thrift/Echo_server.skeleton.cpp' || echo '$(srcdir)/'`../thrift/Echo_server.skeleton.cpp
+
+cwx_echo-Echo_server.skeleton.obj: ../thrift/Echo_server.skeleton.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-Echo_server.skeleton.obj -MD -MP -MF "$(DEPDIR)/cwx_echo-Echo_server.skeleton.Tpo" -c -o cwx_echo-Echo_server.skeleton.obj `if test -f '../thrift/Echo_server.skeleton.cpp'; then $(CYGPATH_W) '../thrift/Echo_server.skeleton.cpp'; else $(CYGPATH_W) '$(srcdir)/../thrift/Echo_server.skeleton.cpp'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-Echo_server.skeleton.Tpo" "$(DEPDIR)/cwx_echo-Echo_server.skeleton.Po"; else rm -f "$(DEPDIR)/cwx_echo-Echo_server.skeleton.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../thrift/Echo_server.skeleton.cpp' object='cwx_echo-Echo_server.skeleton.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-Echo_server.skeleton.obj `if test -f '../thrift/Echo_server.skeleton.cpp'; then $(CYGPATH_W) '../thrift/Echo_server.skeleton.cpp'; else $(CYGPATH_W) '$(srcdir)/../thrift/Echo_server.skeleton.cpp'; fi`
+
+cwx_echo-echo_types.o: ../thrift/echo_types.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-echo_types.o -MD -MP -MF "$(DEPDIR)/cwx_echo-echo_types.Tpo" -c -o cwx_echo-echo_types.o `test -f '../thrift/echo_types.cpp' || echo '$(srcdir)/'`../thrift/echo_types.cpp; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-echo_types.Tpo" "$(DEPDIR)/cwx_echo-echo_types.Po"; else rm -f "$(DEPDIR)/cwx_echo-echo_types.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../thrift/echo_types.cpp' object='cwx_echo-echo_types.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-echo_types.o `test -f '../thrift/echo_types.cpp' || echo '$(srcdir)/'`../thrift/echo_types.cpp
+
+cwx_echo-echo_types.obj: ../thrift/echo_types.cpp
+@am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-echo_types.obj -MD -MP -MF "$(DEPDIR)/cwx_echo-echo_types.Tpo" -c -o cwx_echo-echo_types.obj `if test -f '../thrift/echo_types.cpp'; then $(CYGPATH_W) '../thrift/echo_types.cpp'; else $(CYGPATH_W) '$(srcdir)/../thrift/echo_types.cpp'; fi`; \
+@am__fastdepCXX_TRUE@	then mv -f "$(DEPDIR)/cwx_echo-echo_types.Tpo" "$(DEPDIR)/cwx_echo-echo_types.Po"; else rm -f "$(DEPDIR)/cwx_echo-echo_types.Tpo"; exit 1; fi
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	source='../thrift/echo_types.cpp' object='cwx_echo-echo_types.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCXX_FALSE@	DEPDIR=$(DEPDIR) $(CXXDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCXX_FALSE@	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -c -o cwx_echo-echo_types.obj `if test -f '../thrift/echo_types.cpp'; then $(CYGPATH_W) '../thrift/echo_types.cpp'; else $(CYGPATH_W) '$(srcdir)/../thrift/echo_types.cpp'; fi`
 
 cwx_echo-CwxEchoEventHandler.o: CwxEchoEventHandler.cpp
 @am__fastdepCXX_TRUE@	if $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(cwx_echo_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS) -MT cwx_echo-CwxEchoEventHandler.o -MD -MP -MF "$(DEPDIR)/cwx_echo-CwxEchoEventHandler.Tpo" -c -o cwx_echo-CwxEchoEventHandler.o `test -f 'CwxEchoEventHandler.cpp' || echo '$(srcdir)/'`CwxEchoEventHandler.cpp; \
